Publish the v2.0.0 documentation.

--- a/_modules/cubes/piws/views/facets.html
+++ b/_modules/cubes/piws/views/facets.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../../',
-        VERSION:     '1.2.0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -76,10 +76,15 @@
 		    <ul class="dropdown-menu">
 	          <li class="link-title">PIWS</li>
 			  <li class="divider"></li>
+			  <li><a href="../../../../rights.html">Rights management</a></li>
 			  <li><a href="../../../../views.html">Views</a></li>
 			  <li><a href="../../../../features.html">Features documentation</a></li>
 			  <li class="divider"></li>
 			  <li><a href="../../../../scripts.html">Importation procedures</a></li>
+			  <li><a href="../../../../parsers.html">Standard parsers</a></li>
+			  <li class="divider"></li>
+			  <li><a href="../../../../download.html">Download</a></li>
+			  <li><a href="../../../../upload.html">Upload</a></li>
 		    </ul>
 		  </div>
         </li>
@@ -95,12 +100,11 @@
 
         <!-- info setup -->
           <p class="doc-version">
-           This documentation is for Population Imaging Web Service Cube <strong>version 1.2.0</strong>
+           This documentation is for Population Imaging Web Service Cube <strong>version 2.0.0</strong>
           </p>
         <p class="citing">
-          If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://github.com/neurospin/piws.git">
-          Report a Bug</a>.
+          If you use the software, please do not hesitate to 
+          <a href="https://github.com/neurospin/piws">report a bug</a>.
         </p>
 
       <!-- toc tree -->
@@ -127,14 +131,9 @@
 
 <span class="c1"># Cubicweb import</span>
 <span class="kn">from</span> <span class="nn">cubicweb.web</span> <span class="kn">import</span> <span class="n">facet</span>
-<span class="kn">from</span> <span class="nn">cubicweb.selectors</span> <span class="kn">import</span> <span class="n">is_instance</span>
+<span class="kn">from</span> <span class="nn">cubicweb.predicates</span> <span class="kn">import</span> <span class="n">is_instance</span>
 <span class="kn">from</span> <span class="nn">cubicweb.web.views.facets</span> <span class="kn">import</span> <span class="n">FacetFilterMixIn</span>
-
-<span class="c1"># Brainomics import</span>
-<span class="kn">from</span> <span class="nn">cubes.brainomics.views.facets</span> <span class="kn">import</span> <span class="n">MeasureHandednessFacet</span>
-<span class="kn">from</span> <span class="nn">cubes.brainomics.views.facets</span> <span class="kn">import</span> <span class="n">MeasureGenderFacet</span>
-<span class="kn">from</span> <span class="nn">cubes.brainomics.views.facets</span> <span class="kn">import</span> <span class="n">MeasureAgeFacet</span>
-<span class="kn">from</span> <span class="nn">cubes.neuroimaging.views.facets</span> <span class="kn">import</span> <span class="n">ScanLabelFacet</span>
+<span class="kn">from</span> <span class="nn">cubicweb.web.views.facets</span> <span class="kn">import</span> <span class="n">HasTextFacet</span>
 
 
 <span class="c1">############################################################################</span>
@@ -187,6 +186,34 @@
     <span class="n">title</span> <span class="o">=</span> <span class="n">_</span><span class="p">(</span><span class="s2">&quot;Timepoints&quot;</span><span class="p">)</span></div>
 
 
+<div class="viewcode-block" id="LabelFacet"><a class="viewcode-back" href="../../../../features.html#cubes.piws.views.facets.LabelFacet">[docs]</a><span class="k">class</span> <span class="nc">LabelFacet</span><span class="p">(</span><span class="n">facet</span><span class="o">.</span><span class="n">RQLPathFacet</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot; Filter on label.</span>
+
+<span class="sd">    This filter is applied on &#39;Scan&#39;, &#39;ProcessingRun&#39;,</span>
+<span class="sd">    &#39;QuestionnaireRun&#39; and &#39;GenomicMeasure&#39; entities.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="n">__regid__</span> <span class="o">=</span> <span class="s2">&quot;label-facet&quot;</span>
+    <span class="n">__select__</span> <span class="o">=</span> <span class="n">is_instance</span><span class="p">(</span><span class="s2">&quot;Scan&quot;</span><span class="p">,</span> <span class="s2">&quot;ProcessingRun&quot;</span><span class="p">,</span> <span class="s2">&quot;QuestionnaireRun&quot;</span><span class="p">,</span>
+                             <span class="s2">&quot;GenomicMeasure&quot;</span><span class="p">)</span>
+    <span class="n">path</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;X label L&quot;</span><span class="p">]</span>
+    <span class="n">order</span> <span class="o">=</span> <span class="mi">1</span>
+    <span class="n">filter_variable</span> <span class="o">=</span> <span class="s2">&quot;L&quot;</span>
+    <span class="n">title</span> <span class="o">=</span> <span class="n">_</span><span class="p">(</span><span class="s2">&quot;Labels&quot;</span><span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="NameFacet"><a class="viewcode-back" href="../../../../features.html#cubes.piws.views.facets.NameFacet">[docs]</a><span class="k">class</span> <span class="nc">NameFacet</span><span class="p">(</span><span class="n">facet</span><span class="o">.</span><span class="n">RQLPathFacet</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot; Filter on name.</span>
+
+<span class="sd">    This filter is applied on &#39;FileSet&#39;.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="n">__regid__</span> <span class="o">=</span> <span class="s2">&quot;name-facet&quot;</span>
+    <span class="n">__select__</span> <span class="o">=</span> <span class="n">is_instance</span><span class="p">(</span><span class="s2">&quot;FileSet&quot;</span><span class="p">)</span>
+    <span class="n">path</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;X name N&quot;</span><span class="p">]</span>
+    <span class="n">order</span> <span class="o">=</span> <span class="mi">1</span>
+    <span class="n">filter_variable</span> <span class="o">=</span> <span class="s2">&quot;N&quot;</span>
+    <span class="n">title</span> <span class="o">=</span> <span class="n">_</span><span class="p">(</span><span class="s2">&quot;Name&quot;</span><span class="p">)</span></div>
+
+
 <div class="viewcode-block" id="StudyFacet"><a class="viewcode-back" href="../../../../features.html#cubes.piws.views.facets.StudyFacet">[docs]</a><span class="k">class</span> <span class="nc">StudyFacet</span><span class="p">(</span><span class="n">facet</span><span class="o">.</span><span class="n">RQLPathFacet</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot; Filter on study name (from the &#39;Study&#39; entity).</span>
 
@@ -205,11 +232,11 @@
 <div class="viewcode-block" id="SubjectFacet"><a class="viewcode-back" href="../../../../features.html#cubes.piws.views.facets.SubjectFacet">[docs]</a><span class="k">class</span> <span class="nc">SubjectFacet</span><span class="p">(</span><span class="n">facet</span><span class="o">.</span><span class="n">RQLPathFacet</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot; Filter on subject code (from the &#39;Subject&#39; entity).</span>
 
-<span class="sd">    This filter can is applied on &#39;Scan&#39;, &#39;ProcessingRun&#39;,</span>
-<span class="sd">    &#39;QuestionnaireRun&#39; and &#39;GenomicMeasure&#39; entities.</span>
+<span class="sd">    This filter can is applied on &#39;Scan&#39;, &#39;QuestionnaireRun&#39; and</span>
+<span class="sd">    &#39;GenomicMeasure&#39; entities.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">__regid__</span> <span class="o">=</span> <span class="s2">&quot;subject-facet&quot;</span>
-    <span class="n">__select__</span> <span class="o">=</span> <span class="n">is_instance</span><span class="p">(</span><span class="s2">&quot;Scan&quot;</span><span class="p">,</span> <span class="s2">&quot;ProcessingRun&quot;</span><span class="p">,</span> <span class="s2">&quot;QuestionnaireRun&quot;</span><span class="p">)</span>
+    <span class="n">__select__</span> <span class="o">=</span> <span class="n">is_instance</span><span class="p">(</span><span class="s2">&quot;Scan&quot;</span><span class="p">,</span> <span class="s2">&quot;QuestionnaireRun&quot;</span><span class="p">,</span> <span class="s2">&quot;GenomicMeasure&quot;</span><span class="p">)</span>
     <span class="n">path</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;X in_assessment A&quot;</span><span class="p">,</span> <span class="s2">&quot;A subjects S&quot;</span><span class="p">,</span> <span class="s2">&quot;S code_in_study C&quot;</span><span class="p">]</span>
     <span class="n">order</span> <span class="o">=</span> <span class="mi">3</span>
     <span class="n">filter_variable</span> <span class="o">=</span> <span class="s2">&quot;C&quot;</span>
@@ -288,10 +315,23 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">__regid__</span> <span class="o">=</span> <span class="s2">&quot;processingrun-name-facet&quot;</span>
     <span class="n">__select__</span> <span class="o">=</span> <span class="n">is_instance</span><span class="p">(</span><span class="s2">&quot;ProcessingRun&quot;</span><span class="p">)</span>
-    <span class="n">path</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;X results_files F&quot;</span><span class="p">,</span> <span class="s2">&quot;F name N&quot;</span><span class="p">]</span>
+    <span class="n">path</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;X filesets F&quot;</span><span class="p">,</span> <span class="s2">&quot;F name N&quot;</span><span class="p">]</span>
     <span class="n">order</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">filter_variable</span> <span class="o">=</span> <span class="s2">&quot;N&quot;</span>
     <span class="n">title</span> <span class="o">=</span> <span class="n">_</span><span class="p">(</span><span class="s2">&quot;Type&quot;</span><span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="ProcessingRunSubjectFacet"><a class="viewcode-back" href="../../../../features.html#cubes.piws.views.facets.ProcessingRunSubjectFacet">[docs]</a><span class="k">class</span> <span class="nc">ProcessingRunSubjectFacet</span><span class="p">(</span><span class="n">facet</span><span class="o">.</span><span class="n">RQLPathFacet</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot; Filter on subject code (from the &#39;Subject&#39; entity).</span>
+
+<span class="sd">    This filter can is applied on &#39;ProcessingRun&#39;.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="n">__regid__</span> <span class="o">=</span> <span class="s2">&quot;processingrun-subject-facet&quot;</span>
+    <span class="n">__select__</span> <span class="o">=</span> <span class="n">is_instance</span><span class="p">(</span><span class="s2">&quot;ProcessingRun&quot;</span><span class="p">)</span>
+    <span class="n">path</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;X subjects S&quot;</span><span class="p">,</span> <span class="s2">&quot;S code_in_study C&quot;</span><span class="p">]</span>
+    <span class="n">order</span> <span class="o">=</span> <span class="mi">2</span>
+    <span class="n">filter_variable</span> <span class="o">=</span> <span class="s2">&quot;C&quot;</span>
+    <span class="n">title</span> <span class="o">=</span> <span class="n">_</span><span class="p">(</span><span class="s2">&quot;Subjects&quot;</span><span class="p">)</span></div>
 
 
 <span class="c1">###############################################################################</span>
@@ -299,19 +339,16 @@
 <span class="c1">###############################################################################</span>
 
 <span class="k">def</span> <span class="nf">registration_callback</span><span class="p">(</span><span class="n">vreg</span><span class="p">):</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">unregister</span><span class="p">(</span><span class="n">MeasureHandednessFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">unregister</span><span class="p">(</span><span class="n">MeasureGenderFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">unregister</span><span class="p">(</span><span class="n">MeasureAgeFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">unregister</span><span class="p">(</span><span class="n">ScanLabelFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">GenomicMeasureTypeFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">TimepointFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">StudyFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">SubjectFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">ScanFieldFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">ScanFormatFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">AssessmentTimepointFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">AssessmentSubjectFacet</span><span class="p">)</span>
-    <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">ProcessingRunNameFacet</span><span class="p">)</span>
+
+    <span class="n">vreg</span><span class="o">.</span><span class="n">unregister</span><span class="p">(</span><span class="n">HasTextFacet</span><span class="p">)</span>
+
+    <span class="k">for</span> <span class="n">eclass</span> <span class="ow">in</span> <span class="p">[</span><span class="n">GenomicMeasureTypeFacet</span><span class="p">,</span> <span class="n">TimepointFacet</span><span class="p">,</span> <span class="n">StudyFacet</span><span class="p">,</span>
+                   <span class="n">SubjectFacet</span><span class="p">,</span> <span class="n">ScanFieldFacet</span><span class="p">,</span> <span class="n">ScanFormatFacet</span><span class="p">,</span>
+                   <span class="n">AssessmentTimepointFacet</span><span class="p">,</span> <span class="n">AssessmentSubjectFacet</span><span class="p">,</span>
+                   <span class="n">ProcessingRunNameFacet</span><span class="p">,</span> <span class="n">LabelFacet</span><span class="p">,</span> <span class="n">NameFacet</span><span class="p">,</span>
+                   <span class="n">ProcessingRunSubjectFacet</span><span class="p">]:</span>
+        <span class="n">vreg</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">eclass</span><span class="p">)</span>
+
 </pre></div>
 
           </div>
