--- a/piws/data/cubes.piws.css
+++ b/piws/data/cubes.piws.css
@@ -1,25 +1,86 @@
 
-.fake-link {
-    color: blue;
-    cursor: pointer;
+/* -- Navbar ----------------------------------------------------------- */
+
+a.navbar-brand img {
+    width: 100%;
+    height: 100%;
 }
 
+.navbar-header {
+    width: 20%;
+}
 
-.search-query {
-    margin-top: 20px;
-    width: 800px;;
+.navbar-toggle {
+    position: absolute;
+    float: right;
+    top:0;
+    right:0;
+}
+
+.navbar-collapse {
+    padding-left: 20%;
+    width: 100%;
+    padding-right: 3%;
 }
 
 .navbar-nav {
-    float: left !important;
+    width: 100%;
 }
 
-.navbar-right {
-    float: left !important;
+.navbar-nav > li {
+    width: 50%;
 }
 
-th, td {
-    white-space: nowrap;
+
+/* -- Container ----------------------------------------------------------- */
+
+.container {
+    width: 100%;
+    padding-right: 2%;
+    padding-left: 2%;
+}
+
+.table {
+    table-layout: fixed;
+    width: 100%;
+    word-wrap: break-word;
+    border-collapse: separate;
+}
+
+.cw-table-primary-entity th {
+    width: 20%
+}
+
+.cw-table-primary-entity td {
+    width: 80%
+}
+
+
+/* -- Facets ----------------------------------------------------------- */
+
+.cw_search_box > .btn-toolbar > .btn-block > .btn {
+    margin-left: 0;
+}
+
+fieldset {
+    display: table-cell;
+}
+
+.facetValueDisabled span, div.facetCheckBox span {
+    display: block;
+    padding-left: 10%;
+    width: 100%;
+}
+.facetCheckBox {
+    padding-left: 0;
+    margin-bottom: -1em;
+}
+
+/* -- Misk ----------------------------------------------------------- */
+
+.fake-link {
+    color: blue;
+    cursor: pointer;
 }
 
 div.dataTables_wrapper {
@@ -72,10 +133,6 @@ div.DTFC_LeftBodyLiner {
 .thumbnails {
     list-style: none outside none;
     margin-left: -20px;
-}
-
-.navbar-nav {
-    padding-left: 15%;
 }
 
 .ooview .well{
