--- a/piws/data/cubes.piws.css
+++ b/piws/data/cubes.piws.css
@@ -2,8 +2,7 @@
 /* -- Navbar ----------------------------------------------------------- */
 
 a.navbar-brand img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
 }
 
 .navbar-header {
@@ -63,17 +62,53 @@ a.navbar-brand img {
 }
 
 fieldset {
-    display: table-cell;
+    display: table-cell; /* FF facet selector width*/
+    min-width: auto; /* Chrome facet selector width*/
+}
+
+.facet {
+    overflow: auto; /* Chrome facet selector width*/
 }
 
 .facetValueDisabled span, div.facetCheckBox span {
     display: block;
     padding-left: 10%;
     width: 100%;
+	white-space: nowrap;
 }
 .facetCheckBox {
     padding-left: 0;
-    margin-bottom: -1em;
+    height: 2em;
+}
+
+div.vocabularyFacet {
+    overflow-x: auto !important;
+}
+
+.facetCheckBox {
+    background: url("img/facet_unselected.png") 0% 0% no-repeat !important;
+}
+
+
+/* -- List secondary ---------------------------------------------------- */
+
+.ooview .well{
+    padding: 5px;
+    webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.ooview .glyphicon{
+    font-size: 30px;
+}
+
+.ooview .well p.text-center{
+    margin: 0 0 0;
+}
+
+.secondary-buttons {
+    float: right;
 }
 
 /* -- Misk ----------------------------------------------------------- */
@@ -133,21 +168,6 @@ div.DTFC_LeftBodyLiner {
 .thumbnails {
     list-style: none outside none;
     margin-left: -20px;
-}
-
-.ooview .well{
-    padding: 5px;
-    webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-}
-
-.ooview .glyphicon{
-    font-size: 30px;
-}
-
-.ooview .well p.text-center{
-    margin: 0 0 0px;
 }
 
 ul.list-striped li {
