piws/data/cubes.piws: full width status.

--- a/piws/data/cubes.piws.css
+++ b/piws/data/cubes.piws.css
@@ -30,6 +30,10 @@ a.navbar-brand img {
     width: 50%;
 }
 
+.navbar-nav > li > .dropdown-menu {
+    width: 100%;
+}
+
 
 /* -- Container ----------------------------------------------------------- */
 
